kubernetes/deploy/proxies/internal/portainer/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: portainer
spec:
  ports:
  - protocol: TCP
    port: 9443
    name: http
    targetPort: 9443
