kubernetes/deploy/proxies/internal/portainer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: portainer
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`portainer.vandeneede.org`)
    services:
    - name: portainer
      port: 9443
